# cat-underwriter

./: Makefile  README.md  app_streamlit.py  pyproject.toml  requirements-optional.txt  requirements.txt
cat_underwriting/: app_streamlit.py
data/guidelines/: underwriting_guidelines.md
data/hazard_data/: county_hazard_scores.csv
data/sample_slips/: treaty_slip_hurricane_florida.md  treaty_slip_with_wording_conflict.md
data/synthetic_losses/: historical_losses.csv
notebooks/: 01_demo_workflow.ipynb
outputs/: cat_triage.sqlite  treaty_slip_hurricane_florida_assessment.json  treaty_slip_hurricane_florida_triage_report.md
src/cat_treaty_underwriting_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cat_underwriting/: __init__.py  cli.py  extract.py  guidelines.py  ingest.py  pipeline.py  report.py  schemas.py  scoring.py  storage.py
tests/: test_extract.py  test_guidelines.py  test_pipeline.py  test_scoring.py
